kubernetes/apps/gitea/gitea-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-http
  namespace: gitea
spec:
  selector:
    app: gitea
  ports:
  - port: 3000
    targetPort: http
    name: http
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  namespace: gitea
spec:
  selector:
    app: gitea
  ports:
  - port: 22
    targetPort: ssh
    name: ssh
  type: LoadBalancer  # Gets IP from MetalLB
